--- a/resources/views/partials/components/preloader.twig
+++ b/resources/views/partials/components/preloader.twig
@@ -3,7 +3,7 @@
     <img src="assets/img/preloader-1.gif">
 </div>
 {% else %}
-<div id="preloader" class="preloader-sm">
+<div id="preloader">
     <img src="assets/img/preloader-2.gif">
 </div>
 {% endif %}
