--- a/resources/views/template/partials/html_blocks/footer.twig
+++ b/resources/views/template/partials/html_blocks/footer.twig
@@ -69,7 +69,7 @@
 {% endif %}
 
 {% if uri in ['dashboard','buy','sell','trade','wallet','account-settings'] %}
-<nav class="navbar navbar-static-bottom custom-footer">
+<nav class="navbar navbar-static-bottom">
     <div class="container">
         <p class="navbar-text"><a href="{{ path_for('home') }}">{{ app.name }}</a> <span>&copy; {{ "now" | date("Y") }}</span></p>
         <div class="navbar-right">
