--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -8,12 +8,12 @@
         <div id="page-head" class="container inner-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 col-md-offset-1 text-center">
+                    <div class="col-lg-3 col-lg-offset-1 col-md-3 text-center">
                         <div class="logo-icon">
                             <img src="assets/img/wallet-2.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-7 col-md-offset-1 pl-0 pr-0">
+                    <div class="col-lg-7 col-lg-offset-1 col-md-7 col-md-offset-1 pl-0 pr-0">
                         <div class="head-content">
                             <p><span>Swap</span> is a peer-to-peer exchange for crypto currencies.</p>
                             <p class="fs-15">
