--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -401,6 +401,11 @@ a:focus {
     box-shadow: 0 9px 14px rgba(0, 0, 0, 0.04); */
 }
 
+#header-holder.dashboard-header #nav {
+    background-color: #ffffff;
+    border-bottom: #eaeaea 1px solid;
+}
+
 #header-holder.dashboard-header .navbar-default .navbar-nav>li>a:not(.signin-button) {
     color: #cb4b70!important;
 }
@@ -3693,8 +3698,8 @@ svg.logo text {
 }
 
 #header-holder.homepage-header #page-head {
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 160px;
+    padding-bottom: 160px;
 }
 
 #header-holder.homepage-header #page-head .logo-icon {
@@ -6929,7 +6934,7 @@ div.crypto-bg-3::after {
 -------------------------------------------------------------------*/
 
 #dashboard {
-    padding-top: 70px;
+    padding-top: 130px;
     padding-bottom: 30px;
 }
 
@@ -6944,6 +6949,10 @@ div.crypto-bg-3::after {
 #dashboard b,
 #dashboard strong {
     font-weight: 500;
+}
+
+#dashboard nav.affix {
+    width: 20%;
 }
 
 #dashboard ul.nav.nav-pills.nav-stacked {
@@ -7178,7 +7187,7 @@ div.crypto-bg-3::after {
 
 @media(max-width: 768px) {
     #dashboard {
-        padding-top: 0px;
+        padding-top: 50px;
         padding-bottom: 0px;
     }
     #dashboard .main {
