Post Ad Module 90%

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -71,6 +71,10 @@ a:focus {
     color: #cf6a87;
 }
 
+a.btn-change {
+    cursor: pointer;
+}
+
 .rtl-cols div[class^="col-"] {
     float: right;
 }
