--- a/resources/views/partials/forms/trade/form-components/payment-methods/mobile-money-method.twig
+++ b/resources/views/partials/forms/trade/form-components/payment-methods/mobile-money-method.twig
@@ -2,7 +2,7 @@
     <div class="col-md-4">
         <div class="form-group">
             <div class="form-text">
-                <select v-model="paymentMethod.mobile_network" required>
+                <select v-bind:name="'account-type[' + index + ']'" v-model="paymentMethod.service_provider" data-msg-required="Select A Carrier Network" data-rule-required="true">
                     <option value="" disabled v-bind:selected="true">Select Carrier Network</option>
                     <option v-for="option in mobileNetworks" v-bind:value="option.value" v-text="option.text"></option>
                 </select>
@@ -17,7 +17,19 @@
     <div class="col-md-4">
         <div class="form-group">
             <div class="form-text">
-                <input type="text" placeholder="Enter Mobile Number" v-model="paymentMethod.mobile_number" required>
+                <input type="text" placeholder="Enter Account Name" v-bind:name="'account-name[' + index + ']'" v-model="paymentMethod.account_name" data-msg-required="Enter Account Name of Wallet" data-rule-required="true">
+            </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <p>Registered Account Name</p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <div class="form-group">
+            <div class="form-text">
+                <input type="text" placeholder="Enter Mobile Number" v-bind:name="'account-number[' + index + ']'" v-model="paymentMethod.account_number" data-msg-required="Enter Mobile Number of Wallet" data-rule-required="true">
             </div>
         </div>
     </div>
