--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -30,6 +30,99 @@
         </div>
     </div>
 
+    <div id="home-services" class="container-fluid">
+        <div class="bg-color"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="home-services-box home-services-color1">
+                        <div class="home-services-content">
+                            <div class="home-services-title">Title</div>
+                            <div class="home-services-details">
+                                <p>At vero eos et accusamus et iusto odio dignissimos ducimus.<br>Blanditiis praesentium voludiv.</p>
+                                <p>At vero eos et accusamus et iusto odio dignissimos ducimus.<br>Blanditiis praesentium voludiv.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="home-services-box home-services-color1">
+                        <div class="home-services-content">
+                            <div class="home-services-title">Title</div>
+                            <div class="home-services-details">
+                                <p>At vero eos et accusamus et iusto odio dignissimos ducimus.<br>Blanditiis praesentium voludiv.</p>
+                                <p>At vero eos et accusamus et iusto odio dignissimos ducimus.<br>Blanditiis praesentium voludiv.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="home-services-box home-services-color1">
+                        <div class="home-services-content">
+                            <div class="home-services-title">Title</div>
+                            <div class="home-services-details">
+                                <p>At vero eos et accusamus et iusto odio dignissimos ducimus.<br>Blanditiis praesentium voludiv.</p>
+                                <p>At vero eos et accusamus et iusto odio dignissimos ducimus.<br>Blanditiis praesentium voludiv.</p>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="services" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon">
+                            <img src="" alt="">
+                        </div>
+                        <div class="service-title"><a href="#">Title</a></div>
+                        <div class="service-details">
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum div atque corrupti quos dolores et quas molestias.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon">
+                            <img src="" alt="">
+                        </div>
+                        <div class="service-title"><a href="#">Title</a></div>
+                        <div class="service-details">
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum div atque corrupti quos dolores et quas molestias.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon">
+                            <img src="" alt="">
+                        </div>
+                        <div class="service-title"><a href="#">Title</a></div>
+                        <div class="service-details">
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum div atque corrupti quos dolores et quas molestias.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon">
+                            <img src="" alt="">
+                        </div>
+                        <div class="service-title"><a href="#">Title</a></div>
+                        <div class="service-details">
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum div atque corrupti quos dolores et quas molestias.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     {% include 'partials/html_blocks/footer.twig' %}
 {% endblock %}
 
