Addition of Features/Services to Home page

--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -67,6 +67,7 @@
                                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus.<br>Blanditiis praesentium voludiv.</p>
                             </div>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
