--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -124,6 +124,129 @@
         </div>
     </div>
 
+    <div id="features" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="row-title">A Long Heading</div>
+                </div>
+            </div>
+            <div class="row rtl-cols">
+                <div class="col-sm-12 col-md-5 col-md-offset-2">
+                    <div id="features-holder">
+                        <div class="feature-box feature-d1 show-details">
+                            <div class="feature-title-holder">
+                                <span class="feature-icon"><i class="htfy htfy-worldwide"></i></span>
+                                <span class="feature-title">Title</span>
+                            </div>
+                            <div class="feature-details">
+                                <p>At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus qui blanditiis praesentium voluptatum div
+                                    atque corrupti quos dolores et quas molestias.</p>
+
+                                <p>dignissimos ducimus qui blanditiis praesentium
+                                    voluptatum div atque corrupti quos dolores et quas
+                                    unimo molestias.</p>
+                            </div>
+                        </div>
+                        <div class="feature-box feature-d2">
+                            <div class="feature-title-holder">
+                                <span class="feature-icon"><i class="htfy htfy-cogwheel"></i></span>
+                                <span class="feature-title">Title</span>
+                            </div>
+                            <div class="feature-details">
+                                <p>At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus qui blanditiis praesentium voluptatum div
+                                    atque corrupti quos dolores et quas molestias.</p>
+
+                                <p>dignissimos ducimus qui blanditiis praesentium
+                                    voluptatum div atque corrupti quos dolores et quas
+                                    unimo molestias.</p>
+                            </div>
+                        </div>
+                        <div class="feature-box feature-d3">
+                            <div class="feature-title-holder">
+                                <span class="feature-icon"><i class="htfy htfy-location"></i></span>
+                                <span class="feature-title">Title</span>
+                            </div>
+                            <div class="feature-details">
+                                <p>At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus qui blanditiis praesentium voluptatum div
+                                    atque corrupti quos dolores et quas molestias.</p>
+
+                                <p>dignissimos ducimus qui blanditiis praesentium
+                                    voluptatum div atque corrupti quos dolores et quas
+                                    unimo molestias.</p>
+                            </div>
+                        </div>
+                        <div class="feature-box feature-d4">
+                            <div class="feature-title-holder">
+                                <span class="feature-icon"><i class="htfy htfy-download"></i></span>
+                                <span class="feature-title">Title</span>
+                            </div>
+                            <div class="feature-details">
+                                <p>At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus qui blanditiis praesentium voluptatum div
+                                    atque corrupti quos dolores et quas molestias.</p>
+
+                                <p>dignissimos ducimus qui blanditiis praesentium
+                                    voluptatum div atque corrupti quos dolores et quas
+                                    unimo molestias.</p>
+                            </div>
+                        </div>
+                        <div class="feature-box feature-d5">
+                            <div class="feature-title-holder">
+                                <span class="feature-icon"><i class="htfy htfy-like"></i></span>
+                                <span class="feature-title">Title</span>
+                            </div>
+                            <div class="feature-details">
+                                <p>At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus qui blanditiis praesentium voluptatum div
+                                    atque corrupti quos dolores et quas molestias.</p>
+
+                                <p>dignissimos ducimus qui blanditiis praesentium
+                                    voluptatum div atque corrupti quos dolores et quas
+                                    unimo molestias.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-5">
+                    <div id="features-links-holder">
+                        <div class="icons-axis">
+                            <img src="assets/img/logo.png" alt="">
+                        </div>
+                        <div class="feature-icon-holder feature-icon-holder1 opened" data-id="1">
+                            <div class="feature-icon"><i class="htfy htfy-worldwide"></i></div>
+                            <div class="feature-title">Title</div>
+                        </div>
+                        <div class="feature-icon-holder feature-icon-holder2" data-id="2">
+                            <div class="feature-icon"><i class="htfy htfy-cogwheel"></i></div>
+                            <div class="feature-title">Title</div>
+                        </div>
+                        <div class="feature-icon-holder feature-icon-holder3" data-id="3">
+                            <div class="feature-icon"><i class="htfy htfy-location"></i></div>
+                            <div class="feature-title">Title</div>
+                        </div>
+                        <div class="feature-icon-holder feature-icon-holder4" data-id="4">
+                            <div class="feature-icon"><i class="htfy htfy-download"></i></div>
+                            <div class="feature-title">Title</div>
+                        </div>
+                        <div class="feature-icon-holder feature-icon-holder5" data-id="5">
+                            <div class="feature-icon"><i class="htfy htfy-like"></i></div>
+                            <div class="feature-title">Title</div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+    {% include 'partials/hero/create-account.twig' %}
+
     {% include 'partials/html_blocks/footer.twig' %}
 {% endblock %}
 
